Changelog
=========

4.2 (unreleased)
----------------

- Nothing changed yet.


4.1 (2022-11-24)
----------------

- Moved from a custom trove classifiers list to using the trove-classifiers
  package [hugovk]

- Support checking the Requires-Python metadata [davidandreoletti]

- Silence noisy build backend output when building metadata
  [CAM-Gerlach, wesleybl]

- Official support for Python 3.11 [hugovk, radarhere]

- Some string formatting bugs [hugovk, CAM-Gerlach]

- Now follows black and flake8 rules

- Check if author_email field contains author name [bessman]



4.0 (2022-04-14)
----------------

- No changes from 4.0b2.


4.0b2 (2022-03-29)
------------------

- The deprecation test for test_suite is no longer needed, as the patched
  setuptools method of gathering metadata as a whole is deprecated.

- `description_content_type` also needs a mapping in the metadata map.


4.0b1 (2022-03-28)
------------------

- Added support for PEP517 by using `build` to build the metadata as a
  preferred build method over the old patched setuptools method.
  The old way is depracated and will be removed in 5.0, which also is
  planned to support PEP621.
  Thanks to Christopher A.M. Gerlach for valuable insight into the
  modern packaging systems.


3.3 (2022-03-28)
----------------

- Add a deprecation for `test_suite`


3.2.1 (2022-03-27)
------------------

- Fixed __getattr__-related crash in tests with python3.7 [Robert T. McGibbon]


3.2 (2021-06-22)
----------------

- Added support for pre-commit [CAM Gerlach]

- Rewrote parts of the PyPI support, to avoid using the xmlrpc API,
  since it's being heavily rate-limited at the moment. Only one call
  is using it now, which seems to work fine.

- Backwards incompatible change: As a result of the above change, when
  looking for packages on PyPI, the package name must now be spelled
  exactly correct, including capitalization.

- Some more code cleanup/modernization [CAM Gerlach]
