@@ -1,6 +1,6 @@
 from setuptools import setup, find_packages
 
-version = "0.0foo"
+version = "0.0.1"
 
 setup(
     name="minimal",
