@@ -10,13 +10,13 @@ classifiers =
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Programming Language :: Python :: 3.11
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: Implementation :: CPython
     Programming Language :: Python :: Implementation :: PyPy
 keywords = pypi, quality, testing
 author = Lennart Regebro
@@ -32,25 +32,22 @@ include_package_data = True
 packages = find:
 package_dir =
     = .
+python_requires = >=3.7
 install_requires =
-    build
+    build>=0.7.0
     docutils
-    pep517
+    packaging
     pygments
     requests
-    setuptools>=61.0.0
+    setuptools>=42
     trove-classifiers>=2022.6.26
-    wheel
 
 [options.packages.find]
 where = .
 
 [options.extras_require]
 test =
-    pytest
-    pytest-cov
     setuptools>=60
-    flit >=3.4,<4
     zest.releaser[recommended]
 
 [options.entry_points]
@@ -70,7 +67,6 @@ testpaths =
 [check-manifest]
 ignore =
   .pre-commit-hooks.yaml
-  fetch_classifiers.py
 
 [zest.releaser]
 create-wheel = yes
